--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
 
 <body>
     <nav class="navbar">
-        <h3>Influencer Products</h3>
+        <div class="site-title">
+            <h3>Influencer Products</h3>
+        </div>
+        <div class="menu-item">
+            <ul>
+                <li> <a href="">Home</a></li>
+                <li> <a href="">Products</a></li>
+                <li> <a href="">Sign up</a></li>
+                <li> <a href="">Log in</a></li>
+                <li> <a href=""><i class="fas fa-search"></i></a></li>
+                <li> <a href=""><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+        </div>
     </nav>
     <header class="header">
         <section class="header-info">
             <h1>Start your Journey as <br> Influencer</h1>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos perspiciatis nihil dolore temporibus nulla?
-                Sapiente pariatur fugit non ratione in.</h5> <br>
+            <h5>Build yourself as a brand. Align it with what you love best or where you excel the most. Being an
+                influencer is not about having a large following base, it’s about having the actual power to
+                “influence”.</h5>
+            <br>
             <a class="button" href="">Preebook now <i class="fas fa-arrow-right"></i></a>
         </section>
         <section class="header-image">
@@ -32,86 +46,87 @@
             <div class="item">
                 <img src="images/tripod.png" alt="">
                 <h3 class="item-name">Flex Tripod</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$59.90</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                        class="fas fa-star"></i><i class="fas fa-star"></i> 5.0</p>
+                <p>Grip it, wrap it or stand it, wrappable legs allow you to secure professional camera equipment to
+                    virtually any surface</p>
             </div>
             <div class="item">
                 <img src="images/mic.png" alt="">
                 <h3 class="item-name">Microphone</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$150.85</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                        class="fas fa-star"></i><i class="far fa-star"></i> 4.0</p>
+                <p>Produces clear, powerful, broadcast-quality sound for YouTube, game streaming, podcasting, Zoom calls
+                    and music</p>
             </div>
             <div class="item">
                 <img src="images/airpod.png" alt="">
                 <h3 class="item-name">Airbuds</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$120.50</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                         class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                <p>Spatial audio with dynamic head tracking places sound all around you
+                    Adaptive EQ automatically tunes music to your ears</p>
             </div>
             <div class="item">
                 <img src="images/drone.png" alt="">
                 <h3 class="item-name">Drone</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$1125.00</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                        class="fas fa-star-half-alt"></i></i><i class="far fa-star"></i> 3.5</p>
+                <p>Equipped with an upgraded 45°adjustable 1080P camera, coupled with an anti-shake table, which makes
+                    video recording smooth and stable.</p>
             </div>
             <div class="item">
                 <img src="images/lights.png" alt="">
                 <h3 class="item-name">Light Setup</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$660.85</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                         class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                <p>Offers easy-to-use lighting controls for maximum versatility and light quality
+                    Provides quick mastering for both beginners and professionals, making it ideal for large or small
+                    projects</p>
             </div>
             <div class="item">
                 <img src="images/setup.png" alt="">
                 <h3 class="item-name">Photoshoot Set</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$535.00</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                        class="fas fa-star"></i><i class="fas fa-star"></i> 5.0</p>
+                <p>Ultimate soften light stream and remove shadow to make perfect shooting. Silver internal face can
+                    minimize light loss and maximize light spread.</p>
             </div>
             <div class="item">
                 <img src="images/camera.png" alt="">
                 <h3 class="item-name">Vlogging Camera</h3>
-                <h4 class="item-price">$50.86</h4>
+                <h4 class="item-price">$1400</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                         class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                <p>Fast Hybrid Autofocus and Real Time Eye Autofocus and Real-time Autofocus tracking.
+                    Side flip-out 3.0” LCD screen that also tilts up and down for easier to compose selfie shots</p>
             </div>
             <div class="item">
                 <img src="images/single-light.png" alt="">
                 <h3 class="item-name">Green Screen</h3>
-                <h4 class="item-price">$50.86</h4>
-                <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                <h4 class="item-price">$235.84</h4>
+                <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                        class="fas fa-star-half-alt"></i><i class="far fa-star"></i><i class="far fa-star"></i> 2.5</p>
+                <p>The green screen backdrop is made of muslin opaque material which is almost no see through and no
+                    light leak, that makes sure of every effective shooting and editing like cutout</p>
             </div>
             <div class="item">
                 <img src="images/action.png" alt="">
                 <h3 class="item-name">Action Camera</h3>
                 <h4 class="item-price">$50.86</h4>
                 <p class="rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                        class="fas fa-star"></i><i class="fas fa-star-half-alt"></i> 4.5</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A molestiae ipsa blanditiis impedit
-                    voluptatibus.</p>
+                        class="fas fa-star"></i><i class="fas fa-star"></i> 5.0</p>
+                <p>Professional 4K 30Fps & 2.7K 30Fps video with 16MP photos at up to 30 frames per second for
+                    incredible photos, which is 4 times the resolution of traditional HD cameras.</p>
             </div>
-            <div class="more">See more <i class="fas fa-arrow-right"></i></div>
         </section>
+        <div class="more">See more <i class="fas fa-arrow-right"></i></div>
 
     </main>
 
@@ -120,14 +135,9 @@
             <img src="images/gear.png" alt="">
         </div>
         <div class="feature-info">
-            <h2>Featured Products at one Place</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus maiores enim, autem ipsum aspernatur
-                neque
-                fuga tenetur excepturi illo facere quia dolores velit error molestias a! Quasi quas pariatur sit
-                laborum, a
-                nemo. Laboriosam saepe ipsum architecto suscipit voluptate, corrupti a quaerat autem voluptates ex
-                dolorum
-                voluptatem blanditiis non laudantium!</p>
+            <h2>Learn how to Influence People</h2>
+            <p>Here we are offering you a short time course on "How to Influence People". If you are interested, please
+                click the below button to join our community...</p> <br>
             <a class="button" href="">Join now <i class="fas fa-arrow-right"></i></a>
         </div>
     </section>
